testsuite/vhdl/syntax/test_data/keyword_mismatch/000_process.expected
keyword_mismatch/000_process:11:3: syntax error: ill-formed statement in Process Statement; (Hint: single trailing keyword 'postponed')
  Stimulus: process -- no starting 'postponed'
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ <<-- Here
